# sp1-storage-proof

./: .gitignore  readme.md
coprocessor/: Cargo.toml
coprocessor/src/: main.rs
lib/: Math.sol  readme.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  proof-with-io.json  rust-toolchain
script/src/: main.rs
