[workspace]
[package]
version = "0.1.0"
name = "sp1-evm-coprocessor"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
alloy-primitives = { git = "https://github.com/succinctlabs/alloy-core-private.git" }
alloy-dyn-abi = { git = "https://github.com/succinctlabs/alloy-core-private.git" }
rlp = "0.4.6"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/succinctlabs/tiny-keccak-private.git", branch = "chris/test" }
